--- a/.github/workflows/feature_pipeline.yml
+++ b/.github/workflows/feature_pipeline.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  run-feature-pipeline:
+  feature-pipeline:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,7 +20,6 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run feature pipeline
@@ -29,4 +28,4 @@ jobs:
           MONGO_DB: ${{ secrets.MONGO_DB }}
           MONGO_COLLECTION: ${{ secrets.MONGO_COLLECTION }}
         run: |
-          python -m feature_pipeline.build_features
+          python -m feature_pipeline.run_feature_pipeline
