Fix The Date mismatch logic

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 MONGO_URI=your_mongodb_uri_here
 MONGO_DB=your_database_name_here
 MONGO_COLLECTION=your_collection_name_here
+
+LAT = 24.8607   # Karachi
+LON = 67.0011
